<resources>
    <string name="app_name">My Weather</string>
    <string name="mobile_number">Mobile Number <font color='#FF0000'>*</font></string>
    <string name="full_name">Full Name <font color='#FF0000'>*</font></string>
    <string name="gender">Gender <font color='#FF0000'>*</font></string>
    <string name="date_of_birth">Date of Birth <font color='#FF0000'>*</font></string>
    <string name="address_line_1">Address Line 1 <font color='#FF0000'>*</font></string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pin_code">Pin code <font color='#FF0000'>*</font></string>
</resources>