<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainviewmodel"
            type="com.manohar.myweather.framework.ui.main.MainViewModel" />

        <import type="android.view.View"/>



    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.ui.main.MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="60dp"
        android:gravity="start|center"
        android:paddingStart="15sp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="Register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_margin="15sp"
        >


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_number_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF"
                app:expandedHintEnabled="true"
                android:hint="@string/mobile_number"
                app:hintEnabled="true"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circular"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="@={mainviewmodel.phone}"
                  />

            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:expandedHintEnabled="true"
                app:boxBackgroundColor="#FFF"
            android:hint="@string/full_name"
            app:errorTextColor="@color/red_600"
            app:hintEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circular"
                android:text="@={mainviewmodel.name}"

               />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="10dp">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/gender"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF"
                app:errorTextColor="@color/red_600"
                app:hintEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="true"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    android:layout_gravity="center"
                    android:inputType="none"
                    android:background="@drawable/circular"
                    android:text="@={mainviewmodel.gender}"
                     />



            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF"
                android:hint="@string/date_of_birth"
                app:errorTextColor="@color/red_600"
                app:hintEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="true"
                    android:inputType="none"
                    android:background="@drawable/circular"
                    android:text="@={mainviewmodel.dob}"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <com.manohar.myweather.framework.utils.TextInputProgressLayout
                android:id="@+id/address1_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF"
                app:errorTextColor="@color/red_600"
                android:hint="@string/address_line_1"
                app:hintEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circular"
                    android:maxLength="50"
                    android:text="@={mainviewmodel.address1}"
                   />
            </com.manohar.myweather.framework.utils.TextInputProgressLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <com.manohar.myweather.framework.utils.TextInputProgressLayout
                android:id="@+id/address2_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="#FFF"
                app:boxBackgroundColor="#FFF"
                android:hint="@string/address_line_2"
                app:hintEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circular"
                    android:maxLength="50"
                    android:text="@={mainviewmodel.address2}"
                    />
            </com.manohar.myweather.framework.utils.TextInputProgressLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp">

                <com.manohar.myweather.framework.utils.TextInputProgressLayout
                    android:id="@+id/pincode_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:boxStrokeColor="#FFF"
                    app:boxBackgroundColor="#FFF"
                    android:hint="@string/pin_code"
                    app:errorTextColor="@color/red_600"
                    app:hintEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pincode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/circular"
                        android:inputType="number"
                        android:maxLength="6"
                        android:text="@={mainviewmodel.zipcode}"
                       />
                </com.manohar.myweather.framework.utils.TextInputProgressLayout>
            </com.google.android.material.card.MaterialCardView>



            <com.google.android.material.card.MaterialCardView
                android:id="@+id/check_pincode"
                android:layout_width="120dp"
                android:enabled="@{mainviewmodel.zipcode.length()==6}"
                android:layout_height="50sp"
                android:clickable="true"
                android:layout_gravity="top"
                android:layout_marginStart="15sp"
                app:cardBackgroundColor="@android:color/darker_gray"
                app:cardCornerRadius="16dp"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ProgressBar
                        android:layout_width="20sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:visibility="@{mainviewmodel.isLoading()? View.VISIBLE : View.GONE}"
                        android:id="@+id/progressbar"
                        android:progressTint="@color/red_600"
                        android:layout_height="20sp"/>


                    <TextView
                        android:id="@+id/next_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{mainviewmodel.isLoading()? View.GONE : View.VISIBLE}"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="Check"
                        android:textColor="@color/white"
                         />


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="2dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/district_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:cornerRadius="10sp"
                android:layout_gravity="center"
                android:text="District :"
                android:backgroundTint="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/district_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:textSize="16sp"
                app:cornerRadius="10sp"
                android:layout_gravity="center"
                android:layout_marginStart="15sp"
                android:text="@={mainviewmodel.district}"
                android:backgroundTint="@android:color/darker_gray"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:cornerRadius="10sp"
                android:layout_gravity="center"
                android:text="State :"
                android:backgroundTint="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/state_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:textSize="16sp"
                app:cornerRadius="10sp"
                android:layout_gravity="center"
                android:layout_marginStart="15sp"
                android:text="@={mainviewmodel.state}"
                android:backgroundTint="@android:color/darker_gray"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:enabled="@{mainviewmodel.isDataValidx()}"
            android:layout_marginBottom="20dp"
            app:cornerRadius="10sp"
            android:layout_gravity="center"
            android:text="Register"
            android:backgroundTint="@android:color/darker_gray"
            />


    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>